--- a/index.html
+++ b/index.html
@@ -12,49 +12,46 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">Rubén Ramón <span>formación</span></h1>
+        <h1 class="titulo">Rubén Ramón <span>Concesionario</span></h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="tutoriales.html">Tutoriales</a>
-        <a href="cursos.html">Cursos</a>
-        <a href="contacto.html">Contactos</a>
+        <a href="motos.html">Motos</a>
+        <a href="escapes.html">Escapes</a>
+        <a href="accesorios.html">Accesorios</a>
     </nav>
     <section>
-        <h2>Formacion online a tu ritmo</h2>
-        <p>aprende desde casa</p>
+        <h2>Las mejores motos del mercado</h2>
+        <p>Todas tus motos favoritas en un concesionario</p>
     </section>
     <main>
-        <h2>Mi conetenido</h2>
+        <h2>Nuestras opciones</h2>
         <section>
-            <h3>Cursos</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-backpack" width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <h3>Motos</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-motorbike" width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M5 18v-6a6 6 0 0 1 6 -6h2a6 6 0 0 1 6 6v6a3 3 0 0 1 -3 3h-8a3 3 0 0 1 -3 -3z" />
-                <path d="M10 6v-1a2 2 0 1 1 4 0v1" />
-                <path d="M9 21v-4a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v4" />
-                <path d="M11 10h2" />
+                <path d="M5 16m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
+                <path d="M19 16m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
+                <path d="M7.5 14h5l4 -4h-10.5m1.5 4l4 -4" />
+                <path d="M13 6h2l1.5 3l2 4" />
             </svg>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
         </section>
         <section>
-            <h3>Tutoriales</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-armchair" width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <h3>Escapes</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-flame" width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M5 11a2 2 0 0 1 2 2v2h10v-2a2 2 0 1 1 4 0v4a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-4a2 2 0 0 1 2 -2z" />
-                <path d="M5 11v-5a3 3 0 0 1 3 -3h8a3 3 0 0 1 3 3v5" />
-                <path d="M6 19v2" />
-                <path d="M18 19v2" />
-              </svg>
+                <path d="M12 12c2 -2.96 0 -7 -1 -8c0 3.038 -1.773 4.741 -3 6c-1.226 1.26 -2 3.24 -2 5a6 6 0 1 0 12 0c0 -1.532 -1.056 -3.94 -2 -5c-1.786 3 -2.791 3 -4 2z" />
+            </svg>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
         </section>
         <section>
-            <h3>Blog</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-axe" width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <h3>Accesorios</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-helmet" width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M13 9l7.383 7.418c.823 .82 .823 2.148 0 2.967a2.11 2.11 0 0 1 -2.976 0l-7.407 -7.385" />
-                <path d="M6.66 15.66l-3.32 -3.32a1.25 1.25 0 0 1 .42 -2.044l3.24 -1.296l6 -6l3 3l-6 6l-1.296 3.24a1.25 1.25 0 0 1 -2.044 .42z" />
-              </svg>
+                <path d="M12 4a9 9 0 0 1 5.656 16h-11.312a9 9 0 0 1 5.656 -16z" />
+                <path d="M20 9h-8.8a1 1 0 0 0 -.968 1.246c.507 2 1.596 3.418 3.268 4.254c2 1 4.333 1.5 7 1.5" />
+            </svg>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
         </section>
         <section>
