--- a/accesorios.html
+++ b/accesorios.html
@@ -15,7 +15,7 @@
             <a href="/basic.html">Basic</a>
             <a href="/curriculum.html">Curriculum</a>
             <a href="/ejemplos.html">Ejemplos</a>
-            <a href="/horari/horari.html">Horari</a>        
+            <a href="/horari.html">Horari</a>        
         </nav>
     </header>
 </body>
