--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="/basic.html">Basic</a>
         <a href="/curriculum.html">Curriculum</a>
         <a href="/ejemplos.html">Ejemplos</a>
-        <a href="/horari/horari.html">Horari</a>        
+        <a href="/horari.html">Horari</a>        
     </nav>
     <section>
         <h2>Las mejores motos del mercado</h2>
