--- a/accesorios.html
+++ b/accesorios.html
@@ -12,10 +12,10 @@
             <a href="motos.html">Motos</a>
             <a href="escapes.html">Escapes</a>
             <a href="accesorios.html">Accesorios</a>
-            <a href="/basic.html">Basic</a>
-            <a href="/curriculum.html">Curriculum</a>
-            <a href="/ejemplos.html">Ejemplos</a>
-            <a href="/horari.html">Horari</a>        
+            <a href="basic.html">Basic</a>
+            <a href="curriculum.html">Curriculum</a>
+            <a href="ejemplos.html">Ejemplos</a>
+            <a href="shorari.html">Horari</a>        
         </nav>
     </header>
 </body>
