--- a/basic.html
+++ b/basic.html
@@ -73,23 +73,20 @@
             </p>
         </section>
     </main>
+    <h2>Comentarios de mis profesores</h2>
     <section class="reviews">
-        <h2>Comentarios de mis profesores</h2>
-        <fieldset>Rubén Ramón fue un brillante
-            alumno; siempre destacó
-            con sus asignaciones.
-            Jane Doe
-            Profesor asistente</fieldset>
-        <fieldset>Rubén Ramón fue un brillante
-            alumno; siempre destacó
-            con sus asignaciones.
-            Jane Doe
-            Profesor asistente</fieldset>
-        <fieldset>Rubén Ramón fue un brillante
-            alumno; siempre destacó
-            con sus asignaciones.
-            Jane Doe
-            Profesor asistente</fieldset>
+        <div class="review">
+            <p>Rubén Ramón fue un brillante alumno; siempre destacó con sus asignaciones.</p>
+            <p>Jane Doe Profesor asistente</p>
+        </div>
+        <div class="review">
+            <p>Rubén Ramón fue un brillante alumno; siempre destacó con sus asignaciones.</p>
+            <p>Jane Doe Profesor asistente</p>
+        </div>
+        <div class="review">
+            <p>Rubén Ramón fue un brillante alumno; siempre destacó con sus asignaciones.</p>
+            <p>Jane Doe Profesor asistente</p>
+        </div>
     </section>
 </body>
 </html>
