--- a/basic.html
+++ b/basic.html
@@ -25,7 +25,8 @@
                 <a href="basic.html">Basic</a>
                 <a href="curriculum.html">Curriculum</a>
                 <a href="ejemplos.html">Ejemplos</a>
-                <a href="horari.html">Horari</a>        
+                <a href="horari.html">Horari</a>
+                <a href="flexbox.html">Fontawesome</a>      
             </nav>
         </div>
         <div class="hero">
