--- a/ejemplos.html
+++ b/ejemplos.html
@@ -15,7 +15,8 @@
             <a href="basic.html">Basic</a>
             <a href="curriculum.html">Curriculum</a>
             <a href="ejemplos.html">Ejemplos</a>
-            <a href="horari.html">Horari</a>        
+            <a href="horari.html">Horari</a>
+            <a href="flexbox.html">Fontawesome</a>        
         </nav>
     </header>
     <h1>Ejemplos HTML</h1>
