--- a/horari.html
+++ b/horari.html
@@ -16,7 +16,8 @@
             <a href="basic.html">Basic</a>
             <a href="curriculum.html">Curriculum</a>
             <a href="ejemplos.html">Ejemplos</a>
-            <a href="horari.html">Horari</a>        
+            <a href="horari.html">Horari</a>
+            <a href="flexbox.html">Fontawesome</a>                
         </nav>
     </header>
     <h1>Horari</h1>
