--- a/motos.html
+++ b/motos.html
@@ -14,7 +14,8 @@
         <a href="basic.html">Basic</a>
         <a href="curriculum.html">Curriculum</a>
         <a href="ejemplos.html">Ejemplos</a>
-        <a href="horari.html">Horari</a>        
+        <a href="horari.html">Horari</a>
+        <a href="flexbox.html">Fontawesome</a>        
     </nav>
 </body>
 </html>
