--- a/curriculum.html
+++ b/curriculum.html
@@ -24,7 +24,7 @@
         <h2>Técnico informático y Desarrollador de Software</h2>
     </section>
     <section>
-        <img src="img/WhatsApp Image 2023-10-05 at 21.14.23.jpeg" alt="">
+        <img src="/img/WhatsApp Image 2023-10-05 at 21.14.23.jpeg" alt="">
     </section>
     <main>
         <section>
