--- a/LandingPage/landingpage.html
+++ b/LandingPage/landingpage.html
@@ -8,24 +8,28 @@
 </head>
 <body>
     <header id="showcase">
-        <h1>Welcome to the snow</h1>
+        <h1>Welcome to the forest</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing.
         </p>
         <a href="">Read more</a>
     </header>
-    <section id="section-a">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum assumenda optio hic quo earum laborum, mollitia distinctio, harum ea culpa officiis nisi saepe aliquam, vel perferendis! Excepturi magni unde aperiam.
-        </p>
+    <section class="fonsOrange" id="section-a">
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum assumenda optio hic quo earum laborum, mollitia distinctio, harum ea culpa officiis nisi saepe aliquam, vel perferendis! Excepturi magni unde aperiam.
+            </p>
+        </div>
     </section>
     <section id="section-b">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore nobis atque officia accusamus sed error ea consectetur voluptate! Cum sequi et impedit fugiat praesentium unde molestiae perferendis ut expedita quae.
-        </p>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore nobis atque officia accusamus sed error ea consectetur voluptate! Cum sequi et impedit fugiat praesentium unde molestiae perferendis ut expedita quae.
+            </p>
+        </div>
     </section>
     <section id="section-c">
-        <div class="box">
+        <div class="fonsOrange">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nemo maiores ratione obcaecati, eaque illo ipsa sit rem officia voluptatibus velit, ipsum nostrum. Officiis impedit cupiditate corrupti assumenda, vitae accusantium?
             </p>
@@ -35,7 +39,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, distinctio illum voluptatibus molestiae alias libero itaque temporibus numquam provident facilis quas cum iste, quia et debitis fugiat ullam explicabo amet?
             </p>
         </div>
-        <div class="box">
+        <div class="fonsOrange">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nemo maiores ratione obcaecati, eaque illo ipsa sit rem officia voluptatibus velit, ipsum nostrum. Officiis impedit cupiditate corrupti assumenda, vitae accusantium?
             </p>
