--- a/accesorios.html
+++ b/accesorios.html
@@ -16,7 +16,8 @@
             <a href="curriculum.html">Curriculum</a>
             <a href="ejemplos.html">Ejemplos</a>
             <a href="horari.html">Horari</a>     
-            <a href="flexbox.html">Fontawesome</a>        
+            <a href="flexbox.html">Fontawesome</a>
+            <a href="landingPage/landingpage.html">LandingPage</a>        
         </nav>
     </header>
 </body>
