--- a/curriculum.html
+++ b/curriculum.html
@@ -16,6 +16,7 @@
         <a href="ejemplos.html">Ejemplos</a>
         <a href="horari.html">Horari</a>
         <a href="flexbox.html">Fontawesome</a>
+        <a href="landingPage/landingpage.html">LandingPage</a>
     </nav>
     <header>
         <h1>Rubén Ramón Barea</h1>
