--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <a href="curriculum.html">Curriculum</a>
         <a href="ejemplos.html">Ejemplos</a>
         <a href="horari.html">Horari</a>
-        <a href="flexbox.html">Fontawesome</a>        
+        <a href="flexbox.html">Fontawesome</a>
+        <a href="LandingPage/landingpage.html">LandingPage</a>
     </nav>
     <section>
         <h2>Las mejores motos del mercado</h2>
