--- a/motos.html
+++ b/motos.html
@@ -15,7 +15,8 @@
         <a href="curriculum.html">Curriculum</a>
         <a href="ejemplos.html">Ejemplos</a>
         <a href="horari.html">Horari</a>
-        <a href="flexbox.html">Fontawesome</a>        
+        <a href="flexbox.html">Fontawesome</a>
+        <a href="LandingPage/landingpage.html">LandingPage</a>
     </nav>
 </body>
 </html>
