--- a/LandingPage/landingpage.html
+++ b/LandingPage/landingpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing.
         </p>
-        <a href="">Read more</a>
+        <a href="https://es.wikipedia.org/wiki/Bosque">Read more</a>
     </header>
     <section class="fonsOrange" id="section-a">
         <div>
