--- a/LandingPage/landingpage.html
+++ b/LandingPage/landingpage.html
@@ -12,7 +12,7 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing.
         </p>
-        <a href="https://es.wikipedia.org/wiki/Bosque">Read more</a>
+        <a href="https://es.wikipedia.org/wiki/Bosque" target="_blank">Read more</a>
     </header>
     <section class="fonsOrange" id="section-a">
         <div>
