--- a/galeria.html
+++ b/galeria.html
@@ -9,21 +9,29 @@
 <body>
     <header class="container">
         <nav>
-            <a href=".html"></a>
-            <a href=".html"></a>
-            <a href=".html"></a>
+            <a href="index.html">Home</a>
+            <a href="motos.html">Motos</a>
+            <a href="escapes.html">Escapes</a>
+            <a href="accesorios.html">Accesorios</a>
+            <a href="basic.html">Basic</a>
+            <a href="curriculum.html">Curriculum</a>
+            <a href="ejemplos.html">Ejemplos</a>
+            <a href="horari.html">Horari</a>     
+            <a href="flexbox.html">Fontawesome</a>
+            <a href="landingPage/landingpage.html">LandingPage</a>
+            <a href="galeria.html">Galeria</a>
         </nav>
     </header>
     <div class="galeria">
-        <img src="img/imagen1.jpg" alt="" srcset="" />
-        <img src="img/imagen2.jpg" alt="" srcset="" />
-        <img src="img/imagen3.jpg" alt="" srcset="" />
-        <img src="img/imagen4.jpg" alt="" srcset="" />
-        <img src="img/imagen5.jpg" alt="" srcset="" />
-        <img src="img/imagen6.jpg" alt="" srcset="" />
-        <img src="img/imagen7.jpg" alt="" srcset="" />
-        <img src="img/imagen8.jpg" alt="" srcset="" />
-        <img src="img/imagen9.jpg" alt="" srcset="" />
+        <img src="img/img01_thumbnail.jpg" alt="" srcset="" />
+        <img src="img/img02_thumbnail.jpg" alt="" srcset="" />
+        <img src="img/img03_thumbnail.jpg" alt="" srcset="" />
+        <img src="img/img04_thumbnail.jpg" alt="" srcset="" />
+        <img src="img/img05_thumbnail.jpg" alt="" srcset="" />
+        <img src="img/img06_thumbnail.jpg" alt="" srcset="" />
+        <img src="img/img07_thumbnail.jpg" alt="" srcset="" />
+        <img src="img/img08_thumbnail.jpg" alt="" srcset="" />
+        <img src="img/img09_thumbnail.jpg" alt="" srcset="" />
     </div>
 </body>
 </html>
